@@ -34,13 +34,13 @@ dolfin/dolfin-config.cmake
 
 # Demos and tests
 RE:demo/.*\.(pvd|vtu|pvtu|xml|bin)
-RE:demo/adaptivity/.*/(cpp|python)/.*\.(pvd|vtu|pvtu|xml|bin)
+RE:demo/adaptivity/.*/(cpp|python)/.*\.(pvd|vtu|pvtu|xml|bin|bin.gz)
 RE:demo/adaptivity/.*/indicators.py
 RE:demo/.*/cpp/demo_.*
 RE:test/unit/mesh/(cpp|python)/.*.(xml|m)
 RE:test/unit/parameter/(cpp|python)/.*.(xml|xml.gz)
 RE:test/unit/io/(cpp|python)/.*.(xml|xml.gz|vtu|pvtu|pvd)
-RE:test/unit/adaptivity/(cpp|python)/.*.(bin)
+RE:test/unit/adaptivity/(cpp|python)/.*.(bin|bin.gz)
 RE:test/.*/cpp/.*-test
 RE:bench/.*/cpp/.*-bench
 
